--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=dJ7UnG2gCNIbVHCxIAqyYAQH864F3RtQ
 
 DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=sportofit
+DB_USERNAME=root
+DB_PASSWORD=root
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
