--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=dJ7UnG2gCNIbVHCxIAqyYAQH864F3RtQ
+APP_KEY=XybMwmHFwZok5CKrCZdXpKkuvKmC6hLV
 
 DB_HOST=localhost
 DB_DATABASE=sportofit
@@ -12,8 +12,9 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=mail.woxiprogrammers.com
+MAIL_PORT=25
+MAIL_USERNAME=test@woxiprogrammers.com
+MAIL_PASSWORD=C;_Pm@)uDa%y
 MAIL_ENCRYPTION=null
+MAIL_PRETEND=false
