--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ MAIL_USERNAME=test@woxiprogrammers.com
 MAIL_PASSWORD=C;_Pm@)uDa%y
 MAIL_ENCRYPTION=null
 MAIL_PRETEND=false
+
+VENDOR_FILE_UPLOAD = '/uploads/userdata/vendor/'
+VENDOR_IMAGE_UPLOAD_LIMIT = 3
