--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 /vendor
+storage/framework/sessions/
+storage/framework/views/
+
+storage/logs/
+bootstrap/cache/
 /node_modules
 Homestead.yaml
 Homestead.json
 .env
 .idea/
-storage/
-bootstrap/cache/
 _ide_helper.php
 /nbproject/private/
 public/uploads/
