--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_KEY=XybMwmHFwZok5CKrCZdXpKkuvKmC6hLV
 DB_HOST=localhost
 DB_DATABASE=sportofit
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -20,4 +20,4 @@ MAIL_ENCRYPTION=null
 MAIL_PRETEND=false
 
 VENDOR_FILE_UPLOAD = '/uploads/userdata/vendor/'
-VENDOR_IMAGE_UPLOAD_LIMIT = 3
+VENDOR_IMAGE_UPLOAD_LIMIT = 9999
