--- a/public/STANDARD/bower.json
+++ b/public/STANDARD/bower.json
@@ -9,7 +9,8 @@
     "angular-resource": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "satellizer": "^0.14.0"
+    "satellizer": "^0.14.0",
+    "angular-toastr": "^1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
