--- a/public/bower.json
+++ b/public/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "satellizer": "^0.14.0",
-    "angular-toastr": "^1.7.0"
+    "angular-toastr": "^1.7.0",
+    "sweetalert": "^1.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
