--- a/public/bower.json
+++ b/public/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "angular": "^1.4.0",
     "bootstrap": "^3.2.0",
-    "angular-animate": "^1.4.0",
+    "angular-animate": "^1.5.1",
     "angular-cookies": "^1.4.0",
     "angular-resource": "^1.4.0",
     "angular-sanitize": "^1.4.0",
@@ -12,7 +12,8 @@
     "satellizer": "^0.14.0",
     "angular-toastr": "^1.7.0",
     "sweetalert": "^1.1.3",
-    "angular-bootstrap-calendar": "^0.19.3"
+    "angular-bootstrap-calendar": "^0.19.3",
+    "angular-ui-bootstrap": "^1.2.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
