--- a/public/bower.json
+++ b/public/bower.json
@@ -13,7 +13,8 @@
     "angular-toastr": "^1.7.0",
     "sweetalert": "^1.1.3",
     "angular-bootstrap-calendar": "^0.19.3",
-    "angular-ui-bootstrap": "^1.2.4"
+    "angular-ui-bootstrap": "^1.2.4",
+    "angular-local-storage": "^0.2.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
