--- a/public/bower.json
+++ b/public/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-nicescroll": "^0.0.9",
-    "ng-scrollbars": "^0.0.10"
+    "ng-scrollbars": "^0.0.10",
+    "ngMask": "angular-mask#^3.0.16"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
